# ask-between-the-lines

./: .gitignore  CLAUDE.md  README.md  callout.test.ts  callout.ts  claude.test.ts  claude.ts  esbuild.config.mjs  main.js  main.ts  manifest.json  package-lock.json  package.json  prompt.test.ts  prompt.ts  styles.css  trigger.test.ts  trigger.ts
docs/superpowers/plans/: 2026-03-25-ask-between-the-lines.md  2026-03-28-session-mode-and-callout-improvements.md
docs/superpowers/specs/: 2026-03-25-ask-between-the-lines-design.md  2026-03-28-session-mode-and-callout-improvements-design.md
plugin/: callout.ts  client.ts  esbuild.config.mjs  main.js  main.ts  package-lock.json  package.json  trigger.ts  tsconfig.json
server/: pyproject.toml
server/src/abtl/: claude_adapter.py  cli.py  prompt.py  server.py
server/tests/: test_claude_adapter.py  test_integration.py  test_prompt.py  test_server.py
session-notes/: 2026-03-25-kickoff.md  2026-03-25-v01-implementation.md  2026-03-26-community-distribution-and-security.md  2026-03-28-session-mode-and-callout-improvements.md  2026-03-29-cursor-context-and-test-coverage.md  INDEX.md
