[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-between-the-lines"
version = "0.1.0"
description = "Local HTTP server wrapping claude -p for inline AI queries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
abtl = "abtl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/abtl"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]
